<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电梯安全运行预警系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="idremind">编号(不超过10位)</string>
    <string name="nameremind">名称(填写一些备注信息)</string>
    <string name="welcome">欢迎登录电梯安全运行预警系统</string>
    <string name="registertext">注册</string>
    <string name="findpwdtext">忘记密码？</string>
    <string name="pwdremind">请填写密码</string>
    <string name="logintext">登录</string>
    <string name="suretext">确定</string>
    <string name="resettext">重置</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="date">年月日</string>
    <string name="time">时分</string>
    <string name="total">总条数：</string>
    <string name="current">当前页</string>
    <string name="select">查询</string>
    <string name="from">开始时间：</string>
    <string name="to">结束时间：</string>
    <string name="history">历史</string>
    <string name="list">列表</string>
    <string name="map">图像</string>
    <string name="setting">设置</string>
    <string name="show">查看</string>
    <string name="localon">本地开启</string>
    <string name="localoff">本地关闭</string>
    <string name="serveron">服务开启</string>
    <string name="serveroff">服务关闭</string>
    <string name="checkbtn">数据校正</string>
    <string name="address">地址</string>
    <string name="xlimit">x轴</string>
    <string name="ylimit">y轴</string>
    <string name="zlimit">z轴</string>
    <string name="limit">设置加速度警戒值：</string>
    <string name="xlimitnum">1.5</string>
    <string name="ylimitnum">1.5</string>
    <string name="zlimitnum">2.5</string>
    <string name="switchLanguage">切换语言</string>
    <string name="code">授权码</string>
    <string name="alert">电梯故障，发送警报信息</string>
</resources>
