<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/registerbac"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="注册"
        android:textSize="35sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.1">

        <EditText
            android:id="@+id/lift_id"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:hint="@string/idremind"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/litf_name"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:hint="@string/nameremind"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/lift_pwd"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="@android:color/white"
            android:hint="@string/pwdremind"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/address"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:background="@android:color/white"
            android:hint="@string/address"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textview_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/address"
            android:layout_below="@+id/address"
            android:text="@string/limit"
            android:textSize="22sp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/xlimit"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/address"
            android:layout_alignTop="@+id/ylimit"
            android:text="@string/xlimitnum"
            android:background="@android:color/white"
            android:hint="@string/xlimit"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/ylimit"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textview_limit"
            android:background="@android:color/white"
            android:hint="@string/ylimit"
            android:text="@string/ylimitnum"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/zlimit"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignRight="@+id/address"
            android:layout_alignTop="@+id/ylimit"
            android:background="@android:color/white"
            android:text="@string/zlimitnum"
            android:hint="@string/zlimit"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textSize="22sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/textView_btn"
            android:text="@string/suretext"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/textView_btn"
            android:text="@string/resettext"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>

</LinearLayout>
